--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "prettier": "^3.6.2",
     "sass": "^1.89.2",
     "vite": "^7.0.4"
+  },
+  "dependencies": {
+    "reset-css": "^5.0.2"
   }
 }
